# FernandezAlonsoEtAl_JPinealRes_2025

./: CITATION.cff  LICENSE  README.md  pyproject.toml
calibration/: a_gamma_correction.py  b_TemporalAnalysis_v3.py  c_TemporalAnalysis_TemporalTransferFunction.py  d_illuminance_analysis.py
calibration/Illuminance results/: illum_RGMS-VR01_1_left_20250227T144631.pkl  illum_RGMS-VR01_1_right_20250227T154105.pkl  illum_RGMS-VR02_4_left_20250227T163525.pkl  illum_RGMS-VR02_4_right_20250227T165051.pkl  illum_RGMS-VR02_left_20250227T122949.pkl  illum_RGMS-VR02_right_20250227T121102.pkl  illum_RGMS-VR03_3_left_20250227T141357.pkl  illum_RGMS-VR03_3_right_20250227T130747.pkl  illum_RGMS-VR03_5_left_20250227T173008.pkl  illum_RGMS-VR03_5_right_20250227T171558.pkl
calibration/Radiance results/: Radiance_gamma_2.2252_htc-pe-01_rightEye_rep_1_2022-08-11_16.57.csv  Radiance_gamma_2.2252_htc-pe-01_rightEye_rep_2_2022-08-11_17.03.csv  Radiance_gamma_2.2252_htc-pe-01_rightEye_rep_3_2022-08-11_17.08.csv
calibration/Temporal results/: ResultsFFT_.csv  ResultsFFT_Temporal_Combined.csv
data/: VR_paper_melatonin_processed data.parquet  VR_paper_melatonin_results.parquet
src/: 01_melatonin_analysis.py  02_melatonin_regression_model.R  03_eyeTracking_plot.py
